--- a/mona_v1.0/src/Makefile.in
+++ b/mona_v1.0/src/Makefile.in
@@ -45,6 +45,7 @@ SOURCES      = cstart.cpp            \
                Segments.cpp          \
                test_higepon.cpp      \
                Mutex.cpp             \
+               VesaConsole.cpp       \
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
