--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -22,8 +22,6 @@ KERNEL_IMG   = $(BIN)/KERNEL.IMG
 BOOT1        = $(BIN)/firstboot.bin
 BOOT2        = $(BIN)/secondboot.bin
 KERNEL       = $(BIN)/third.bin
-USER_PROCESS = $(BIN)/USER.ELF
-USER_PROCESS2 = $(BIN)/TEST.ELF
 FAT_TOOL     = $(BIN)/fat_write.exe
 TEMPLATE     = $(TOOLS)/fat_template.img
 SOURCES      = cstart.cpp            \
@@ -66,6 +64,7 @@ $(TARGET) : $(BOOT1) $(BOOT2) $(KERNEL) $(FAT_TOOL) userapp
 	(cd $(BIN); $(FAT_TOOL) mona.img KERNEL.IMG)
 	(cd $(BIN); $(FAT_TOOL) mona.img USER.ELF)
 	(cd $(BIN); $(FAT_TOOL) mona.img TEST.ELF)
+	(cd $(BIN); $(FAT_TOOL) mona.img KEYBDMNG.SVR)
 
 $(FAT_TOOL) : $(TOOLS)/fat_write.cpp FAT12.cpp include/FAT12.h string.cpp BitMap.cpp
 	$(CC) -DFS_TEST -o $(FAT_TOOL) $(TOOLS)/fat_write.cpp $(TOOLS)/HogeDriver.cpp FAT12.cpp string.cpp BitMap.cpp -idirafter include -idirafter $(USERINCLUDE) -idirafter $(TOOLS)
