--- a/mona_v1.0/src/user/Makefile.in
+++ b/mona_v1.0/src/user/Makefile.in
@@ -11,7 +11,7 @@ SOURCES         = hello.cpp           \
                   KeyBoardManager.cpp \
                   string.cpp          \
                   KeyBoardServer.cpp  \
-                  MemoryManager.o     \
+                  MemoryManager.cpp   \
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
