--- a/mona_v1.0/src/user/Makefile
+++ b/mona_v1.0/src/user/Makefile
@@ -14,17 +14,21 @@ CFINCLUDE       = -I$(USERINCLUDE)
 USER_PROCESS    = $(BIN)/USER.ELF
 USER_PROCESS2   = $(BIN)/TEST.ELF
 KEYBOARD_SERVER = $(BIN)/KEYBDMNG.SVR
-SOURCES         = hello.cpp           \
-                  test.cpp            \
-                  userlib.cpp         \
-                  KeyBoardManager.cpp \
-                  string.cpp          \
-                  KeyBoardServer.cpp  \
-                  MemoryManager.cpp   \
+VFS_SERVER      = $(BIN)/VFS.SVR
+SOURCES         = hello.cpp                   \
+                  test.cpp                    \
+                  userlib.cpp                 \
+                  KeyBoardManager.cpp         \
+                  string.cpp                  \
+                  KeyBoardServer.cpp          \
+                  MemoryManager.cpp           \
+                  uFAT12.cpp                  \
+                  BitMap.cpp                  \
+                  VirtualFileSystemServer.cpp \
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
-all : $(USER_PROCESS) $(USER_PROCESS2) $(KEYBOARD_SERVER)
+all : $(USER_PROCESS) $(USER_PROCESS2) $(KEYBOARD_SERVER) $(VFS_SERVER)
 
 $(USER_PROCESS) : userlib.o KeyBoardManager.o hello.o MemoryManager.o string.o
 	ld -n -Ttext 0xA0000000 -e _user_start -static hello.o userlib.o MemoryManager.o string.o -o $(USER_PROCESS)
@@ -37,6 +41,10 @@ $(USER_PROCESS2) : userlib.o KeyBoardManager.o test.o MemoryManager.o string.o
 $(KEYBOARD_SERVER) : userlib.o KeyBoardManager.o MemoryManager.o string.o KeyBoardServer.o
 	ld -n -Ttext 0xA0000000 -e _user_start -static KeyBoardServer.o userlib.o MemoryManager.o KeyBoardManager.o string.o -o $(KEYBOARD_SERVER)
 	objcopy --output-target=elf32-i386 $(KEYBOARD_SERVER)
+
+$(VFS_SERVER) : userlib.o MemoryManager.o string.o VirtualFileSystemServer.o BitMap.o uFAT12.o
+	ld -n -Ttext 0xA0000000 -e _user_start -static VirtualFileSystemServer.o userlib.o MemoryManager.o string.o BitMap.o uFAT12.o -o $(VFS_SERVER)
+	objcopy --output-target=elf32-i386 $(VFS_SERVER)
 
 .SUFFIXES: .cpp .o
 .cpp.o:
