--- a/mona_v1.0/src/Makefile.in
+++ b/mona_v1.0/src/Makefile.in
@@ -108,7 +108,7 @@ dist :
 	cd ../bin; zip  -9 ../../mona-$(VERSION)-image.zip  mona.img
 	cd ../../; tar cf - mona_v1.0 | gzip -9 > "mona-$(VERSION).tar.gz"
 
-write : $(TARGET)
+write : copy_userapp
 	cp $(TARGET) /dev/fd0
 
 include $(ENV)/dependencies
