--- a/mona_v1.0/src/user/Makefile.in
+++ b/mona_v1.0/src/user/Makefile.in
@@ -5,6 +5,7 @@ CFINCLUDE       = -I$(USERINCLUDE)
 HELLO           = $(BIN)/HELLO.ELF
 KEYBOARD_SERVER = $(BIN)/KEYBDMNG.SVR
 SHELL_SERVER    = $(BIN)/SHELL.SVR
+JPEG_DEMO       = $(BIN)/JPEGDEMO.ELF
 SOURCES         = hello.cpp                   \
                   test.cpp                    \
                   userlib.cpp                 \
@@ -17,10 +18,11 @@ SOURCES         = hello.cpp                   \
                   VirtualFileSystemServer.cpp \
                   jpegls.cpp                  \
                   ShellServer.cpp             \
+                  jpegdemo.cpp                \
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
-all : $(HELLO) $(KEYBOARD_SERVER) $(SHELL_SERVER)
+all : $(HELLO) $(KEYBOARD_SERVER) $(SHELL_SERVER) $(JPEG_DEMO)
 
 $(HELLO) : userlib.o hello.o MemoryManager.o string.o
 	ld -n -Ttext 0xA0000000 -e _user_start -static hello.o userlib.o MemoryManager.o string.o -o $(HELLO)
@@ -34,6 +36,10 @@ $(SHELL_SERVER) : userlib.o MemoryManager.o string.o ShellServer.o KeyBoardManag
 	ld -n -Ttext 0xA0000000 -e _user_start -static ShellServer.o userlib.o KeyBoardManager.o MemoryManager.o string.o  -o $(SHELL_SERVER)
 	objcopy --output-target=elf32-i386 $(SHELL_SERVER)
 
+$(JPEG_DEMO) : userlib.o MemoryManager.o string.o jpegdemo.o jpegls.o
+	ld -n -Ttext 0xA0000000 -e _user_start -static jpegdemo.o userlib.o jpegls.o MemoryManager.o string.o  -o $(JPEG_DEMO)
+	objcopy --output-target=elf32-i386 $(JPEG_DEMO)
+
 .SUFFIXES: .cpp .o
 .cpp.o:
 	$(CC) $(CFLAGS) $(CFINCLUDE) -c $<
@@ -42,6 +48,6 @@ depend:
 	$(CC) -MM $(CFINCLUDE) $(CFLAGS) $(SOURCES) > dependencies
 
 clean :
-	rm -f $(OBJECTS) $(HELLO) $(KEYBOARD_SERVER) $(SHELL_SERVER)
+	rm -f $(OBJECTS) $(HELLO) $(KEYBOARD_SERVER) $(SHELL_SERVER) $(JPEG_DEMO)
 
 include dependencies
