--- a/mona_v1.0/tools/mmtest/Makefile
+++ b/mona_v1.0/tools/mmtest/Makefile
@@ -1,4 +1,4 @@
 all : ./mem.exe
 
 ./mem.exe : ./mem.cpp ../../src/MemoryManager.cpp ../../src/include/MemoryManager.h
-	g++ -g -D MM_TEST mem.cpp ../../src/MemoryManager.cpp -o mem.exe -idirafter ../../src/include -idirafter ../../src/user
+	g++ -g -D MM_TEST mem.cpp ../../src/MemoryManager.cpp -o mem.exe -idirafter ../../src/include -idirafter ../../src/user/include
