--- a/mona_v1.0/src/user/Makefile
+++ b/mona_v1.0/src/user/Makefile
@@ -15,6 +15,7 @@ HELLO           = $(BIN)/HELLO.ELF
 KEYBOARD_SERVER = $(BIN)/KEYBDMNG.SVR
 SHELL_SERVER    = $(BIN)/SHELL.SVR
 JPEG_DEMO       = $(BIN)/JPEGDEMO.ELF
+MAP_SERVER      = $(BIN)/MAP.SVR
 SOURCES         = hello.cpp                   \
                   test.cpp                    \
                   userlib.cpp                 \
@@ -28,10 +29,11 @@ SOURCES         = hello.cpp                   \
                   jpegls.cpp                  \
                   ShellServer.cpp             \
                   jpegdemo.cpp                \
+                  MapServer.cpp               \
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
-all : $(HELLO) $(KEYBOARD_SERVER) $(SHELL_SERVER) $(JPEG_DEMO)
+all : $(HELLO) $(KEYBOARD_SERVER) $(SHELL_SERVER) $(JPEG_DEMO) $(MAP_SERVER)
 
 $(HELLO) : userlib.o hello.o MemoryManager.o string.o
 	ld -n -Ttext 0xA0000000 -e _user_start -static hello.o userlib.o MemoryManager.o string.o -o $(HELLO)
@@ -49,6 +51,10 @@ $(JPEG_DEMO) : userlib.o MemoryManager.o string.o jpegdemo.o jpegls.o
 	ld -n -Ttext 0xA0000000 -e _user_start -static jpegdemo.o userlib.o jpegls.o MemoryManager.o string.o  -o $(JPEG_DEMO)
 	objcopy --output-target=elf32-i386 $(JPEG_DEMO)
 
+$(MAP_SERVER) : MapServer.o userlib.o MemoryManager.o string.o
+	ld -n -Ttext 0xA0000000 -e _user_start -static MapServer.o userlib.o MemoryManager.o string.o  -o $(MAP_SERVER)
+	objcopy --output-target=elf32-i386 $(MAP_SERVER)
+
 .SUFFIXES: .cpp .o
 .cpp.o:
 	$(CC) $(CFLAGS) $(CFINCLUDE) -c $<
@@ -57,6 +63,6 @@ depend:
 	$(CC) -MM $(CFINCLUDE) $(CFLAGS) $(SOURCES) > dependencies
 
 clean :
-	rm -f $(OBJECTS) $(HELLO) $(KEYBOARD_SERVER) $(SHELL_SERVER) $(JPEG_DEMO)
+	rm -f $(OBJECTS) $(HELLO) $(KEYBOARD_SERVER) $(SHELL_SERVER) $(JPEG_DEMO) $(MAP_SERVER)
 
 include dependencies
