--- a/mona_v1.0/src/user/Makefile.in
+++ b/mona_v1.0/src/user/Makefile.in
@@ -7,6 +7,10 @@ KEYBOARD_SERVER = $(BIN)/KEYBDMNG.SVR
 SHELL_SERVER    = $(BIN)/SHELL.SVR
 JPEG_DEMO       = $(BIN)/JPEGDEMO.ELF
 MAP_SERVER      = $(BIN)/MAP.SVR
+LIB             = -L./lib
+LIB_USER        = lib/libuser.a
+LFLAGS          = -n -Ttext 0xA0000000 -e _user_start -static -luser
+OFLAGS          = --output-target=elf32-i386
 SOURCES         = hello.cpp                   \
                   test.cpp                    \
                   userlib.cpp                 \
@@ -26,25 +30,28 @@ OBJECTS = $(SOURCES:.cpp=.o)
 
 all : $(HELLO) $(KEYBOARD_SERVER) $(SHELL_SERVER) $(JPEG_DEMO) $(MAP_SERVER)
 
-$(HELLO) : userlib.o hello.o MemoryManager.o string.o
-	ld -n -Ttext 0xA0000000 -e _user_start -static hello.o userlib.o MemoryManager.o string.o -o $(HELLO)
-	objcopy --output-target=elf32-i386 $(HELLO)
+$(LIB_USER) : userlib.o string.o MemoryManager.o
+	ar cvr $(LIB_USER) userlib.o string.o MemoryManager.o
 
-$(KEYBOARD_SERVER) : userlib.o KeyBoardManager.o MemoryManager.o string.o KeyBoardServer.o
-	ld -n -Ttext 0xA0000000 -e _user_start -static KeyBoardServer.o userlib.o MemoryManager.o KeyBoardManager.o string.o -o $(KEYBOARD_SERVER)
-	objcopy --output-target=elf32-i386 $(KEYBOARD_SERVER)
+$(HELLO) : hello.o $(LIB_USER)
+	$(LD) $(LFLAGS) hello.o $(LIB) -o $(HELLO)
+	objcopy $(OFLAGS) $(HELLO)
 
-$(SHELL_SERVER) : userlib.o MemoryManager.o string.o ShellServer.o KeyBoardManager.o
-	ld -n -Ttext 0xA0000000 -e _user_start -static ShellServer.o userlib.o KeyBoardManager.o MemoryManager.o string.o  -o $(SHELL_SERVER)
-	objcopy --output-target=elf32-i386 $(SHELL_SERVER)
+$(KEYBOARD_SERVER) : KeyBoardManager.o KeyBoardServer.o $(LIB_USER)
+	$(LD) $(LFLAGS) KeyBoardServer.o KeyBoardManager.o $(LIB) -o $(KEYBOARD_SERVER)
+	objcopy $(OFLAGS) $(KEYBOARD_SERVER)
 
-$(JPEG_DEMO) : userlib.o MemoryManager.o string.o jpegdemo.o jpegls.o
-	ld -n -Ttext 0xA0000000 -e _user_start -static jpegdemo.o userlib.o jpegls.o MemoryManager.o string.o  -o $(JPEG_DEMO)
-	objcopy --output-target=elf32-i386 $(JPEG_DEMO)
+$(SHELL_SERVER) : ShellServer.o KeyBoardManager.o $(LIB_USER)
+	$(LD) $(LFLAGS) ShellServer.o KeyBoardManager.o $(LIB) -o $(SHELL_SERVER)
+	objcopy $(OFLAGS) $(SHELL_SERVER)
 
-$(MAP_SERVER) : MapServer.o userlib.o MemoryManager.o string.o
-	ld -n -Ttext 0xA0000000 -e _user_start -static MapServer.o userlib.o MemoryManager.o string.o  -o $(MAP_SERVER)
-	objcopy --output-target=elf32-i386 $(MAP_SERVER)
+$(JPEG_DEMO) : jpegdemo.o jpegls.o $(LIB_USER)
+	$(LD) $(LFLAGS) jpegdemo.o jpegls.o $(LIB)  -o $(JPEG_DEMO)
+	objcopy $(OFLAGS) $(JPEG_DEMO)
+
+$(MAP_SERVER) : MapServer.o $(LIB_USER)
+	$(LD) $(LFLAGS) MapServer.o $(LIB) -o $(MAP_SERVER)
+	objcopy $(OFLAGS) $(MAP_SERVER)
 
 .SUFFIXES: .cpp .o
 .cpp.o:
@@ -54,6 +61,6 @@ depend:
 	$(CC) -MM $(CFINCLUDE) $(CFLAGS) $(SOURCES) > dependencies
 
 clean :
-	rm -f $(OBJECTS) $(HELLO) $(KEYBOARD_SERVER) $(SHELL_SERVER) $(JPEG_DEMO) $(MAP_SERVER)
+	rm -f $(OBJECTS) $(HELLO) $(KEYBOARD_SERVER) $(SHELL_SERVER) $(JPEG_DEMO) $(MAP_SERVER) $(LIB_USER)
 
 include dependencies
