--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -27,6 +27,7 @@ KEYBOARD_SERVER = $(BIN)/KEYBDMNG.SVR
 SHELL_SERVER    = $(BIN)/SHELL.SVR
 JPEG_DEMO       = $(BIN)/JPEGDEMO.ELF
 MAP_SERVER      = $(BIN)/MAP.SVR
+MOUSE_SERVER    = $(BIN)/MOUSE.SVR
 FAT_TOOL        = $(BIN)/fat_write.exe
 TEMPLATE        = $(TOOLS)/fat_template.img
 SOURCES      = cstart.cpp            \
@@ -62,12 +63,13 @@ OBJECTS = $(SOURCES:.cpp=.o)
 
 all : copy_userapp
 
-copy_userapp : $(TARGET) $(HELLO) $(SHELL_SERVER) $(KEYBOARD_SERVER) $(JPEG_DEMO) $(MAP_SERVER)
+copy_userapp : $(TARGET) $(HELLO) $(SHELL_SERVER) $(KEYBOARD_SERVER) $(JPEG_DEMO) $(MAP_SERVER) $(MOUSE_SERVER)
 	(cd $(BIN); $(FAT_TOOL) mona.img HELLO.ELF)
 	(cd $(BIN); $(FAT_TOOL) mona.img SHELL.SVR)
 	(cd $(BIN); $(FAT_TOOL) mona.img KEYBDMNG.SVR)
 	(cd $(BIN); $(FAT_TOOL) mona.img JPEGDEMO.ELF)
 	(cd $(BIN); $(FAT_TOOL) mona.img MAP.SVR)
+	(cd $(BIN); $(FAT_TOOL) mona.img MOUSE.SVR)
 
 $(TARGET) : $(BOOT1) $(BOOT2) $(KERNEL) $(FAT_TOOL) userapp
 	cat $(BOOT2) $(KERNEL) > $(KERNEL_IMG)
