--- a/mona_v1.0/src/env/djgpp.env
+++ b/mona_v1.0/src/env/djgpp.env
@@ -4,4 +4,4 @@ CC         = ${DJGPP_HOME_H}/bin/gpp
 LD         = ${DJGPP_HOME_H}/bin/ld
 STRIP      = ${DJGPP_HOME_H}/bin/strip
 LFLAGS     = -n -Ttext 0x1200 -static --oformat binary
-CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c
+CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -O2
