--- a/mona_v1.0/src/env/cygwin.env
+++ b/mona_v1.0/src/env/cygwin.env
@@ -6,4 +6,4 @@ STRIP      = /usr/bin/strip
 CONTRIB_LIB= ./contrib/lib_cygwin
 LFLAGS     = -n -Ttext 0x1200 -static
 # for gcc3.x@cygwin
-CFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -Wall
+CFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -Wall -O2
